# Railway-Incident-Classification-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  scripts_compliance_check.py
.github/workflows/: ci.yml  monthly_secret_rotation.yml  weekly_model_refresh.yml
app/: main.py
app/agents/: classification_agent.py  intake_agent.py  questioning_agent.py  recommendation_agent.py  retrieval_agent.py  safety_agent.py
app/api/: routes.py
app/core/: config.py  metrics.py  middleware.py  prompts.py  security.py  telemetry.py
app/data/: ip_blocklist.txt
app/eval/: benchmark.py  benchmark_report_v1.json  eval_dataset_v1.json  eval_dataset_v1_qa_report.json  gate_thresholds.py  generate_eval_dataset.py  qa_eval_dataset.py
app/models/: schemas.py  taxonomy.py
app/services/: audit.py  ddos_guard.py  gemini.py  ip_reputation.py  (+8 more)
docs/: architecture-diagram.md  compliance_report.json  implementation_matrix.md  kubernetes_scaling_plan.md  production-deployment.mmd  runbook.md  runtime-architecture.mmd  security_assessment_v1.json  security_assessment_v1.md
scripts/: chaos_abuse_test.py  export_audit_signed.py  red_team_simulation.py  refresh_gemini_model.py  rotate_secrets.py  verify_audit_chain.py
tests/: test_benchmark_predictor_modes.py  test_classification_prompt.py  test_ddos_guard.py  test_eval_dataset.py  test_gemini_contract.py  test_orchestrator.py  test_prompt_injection.py  test_rate_limiter.py  test_retrieval_eval_ingest.py  test_safety.py  test_schema.py  test_security_auth.py
(+11 files in other folders)
