[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-incident-classification-assistant"
version = "0.1.0"
description = "Railway incident classification assistant with Gemini backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.9",
  "httpx>=0.28.0",
  "openpyxl>=3.1.5"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
